syntax = "proto3";

package menuitemprice.v1;

option go_package = "github.com/defvova/go_projects/mini_food_delivery/menu/pkg/menuitemprice/v1;menuitempricev1";

service MenuItemPriceService {
  rpc GetAllMenuItemPrices(GetAllMenuItemPricesRequest) returns (GetAllMenuItemPricesResponse) {}
}

message MenuItemPrice {
  int64 id = 1;
  int32 price_cents = 2;
  string currency = 3;
}

message GetAllMenuItemPricesRequest {
  int32 limit = 1;
  int32 offset = 2;
  int64 menu_item_id = 3;
}

message GetAllMenuItemPricesResponse {
  repeated MenuItemPrice items = 1;
}
